# OpenTouhou

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
src/: BinaryReader.cpp  PBG3.cpp  PBG3.hpp  main.cpp
src/parser/: BinaryReader.cpp  BinaryReader.hpp  PBG3.cpp  PBG3.hpp
